--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ function enviarReserva() {
   formData.append('whatsapp', whatsapp);
   formData.append('email', email);
 
-  fetch('reserva.php', {
+  fetch('reservas-pentagol.infinityfreeapp.com/reserva.php', {
     method: 'POST',
     body: formData,
   })
