--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
   </footer>
 
   <!-- Leaflet JS -->
- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+ <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin=""/>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
 
 
   <script>
@@ -370,7 +370,7 @@ function enviarReserva() {
   formData.append('whatsapp', whatsapp);
   formData.append('email', email);
 
-  fetch('https://heldernovaes-github-io.onrender.com/reserva.php', {
+  fetch('/reserva.php', {
     method: 'POST',
     body: formData,
   })
