--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     <div class="campos">
       <div class="campo" onclick="abrirFormulario('Cancha 1')">
         <img src="img/campo1.png" alt="Campo 1" />
-        <h3>Cancha de 7 jugadores</h3>
+        <h3>Cancha de 7 jugadores <br> (Cancha 1)</h3>
       </div>
       <div class="campo" onclick="abrirFormulario('Cancha 2')">
         <img src="img/campo1.png" alt="Campo 2" />
-        <h3>Cancha de 6 jugadores</h3>
+        <h3>Cancha de 6 jugadores <br> (Cancha 2)</h3>
       </div>
       <div class="campo" onclick="abrirFormulario('Cancha 3')">
         <img src="img/campo1.png" alt="Campo 3" />
-        <h3>Cancha de 5 jugadores</h3>
+        <h3>Cancha de 5 jugadores <br> (Cancha 3)</h3>
       </div>
       <div class="campo" onclick="abrirFormulario('Cancha 4')">
         <img src="img/campo1.png" alt="Campo 4" />
-        <h3>Cancha de 5 jugadores</h3>
+        <h3>Cancha de 5 jugadores <br> (Cancha 4)</h3>
       </div>
     </div>
 
