--- a/disponivel.html
+++ b/disponivel.html
@@ -6,11 +6,36 @@
   <link rel="stylesheet" href="disponivel.css">
   <style>
     body { font-family: sans-serif; padding: 20px;
-      background: #00eeff; }
+      background: #00f7ff; }
     .horarios { display: flex; flex-wrap: wrap; gap: 10px; margin-top: 20px; }
     .horario { padding: 10px 15px; background: #4caf50; color: white; border-radius: 6px; cursor: pointer; }
     .horario.ocupado { background: #ccc; cursor: not-allowed; text-decoration: line-through; }
-    
+    /* Container principal */
+
+/* Labels e campos */
+
+
+
+
+/* Container de horários */
+
+/* Responsividade */
+@media (max-width: 600px) {
+  .form-container {
+    margin: 20px 10px;
+    padding: 15px;
+  }
+
+  #horariosContainer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .horarios .horario {
+    width: 80%;
+  }
+}
+
   </style>
 </head>
 <body>
