--- a/index.html
+++ b/index.html
@@ -12,7 +12,24 @@
     crossorigin=""
   />
   <link rel="stylesheet" href="styles.css" />
+<style>
+ 
+  .btn-disponivel {
+    display: inline-block;
+    background-color: #28a745;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    margin: 20px;
+    font-weight: bold;
 
+  }
+
+  .btn-disponivel:hover {
+    background-color: #218838;
+  }
+  </style>
 </head>
 
 <body>
