--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
  
 
   </header>
-   <a href="disponivel.html" target="_blank" class="btn-disponivel">Ver Horários Disponíveis</a>
+   <a href="disponivel.html" class="btn-disponivel">Ver Horários Disponíveis</a>
   
   <main>
     <div class="campos" id="cancha">
