--- a/disponivel.html
+++ b/disponivel.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Horários Disponíveis</title>
+  <title>Horarios Disponibles</title>
   <link rel="stylesheet" href="disponivel.css">
   <style>
     body { font-family: sans-serif; padding: 20px;
@@ -41,7 +41,7 @@
   </style>
 </head>
 <body>
-  <h2>Ver Horários Disponíveis</h2>
+  <h2>Ver Horarios Disponibles</h2>
   <label>Cancha:
    <select id="cancha" name="cancha" required>
       <option value="Cancha 1">Cancha 1</option>
@@ -53,8 +53,8 @@
   <label>Data:
     <input type="date" id="data" />
   </label>
-  <button onclick="carregarHorarios()">Verificar</button>
-  <h2 id="tituloHorarios">Horários disponíveis</h2>
+  <button onclick="carregarHorarios()">Revisar</button>
+  <h2 id="tituloHorarios">Horarios Disponibles</h2>
 <div id="horariosContainer"></div>
   <div class="horarios" id="listaHorarios"></div>
 
